--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,15 +1,15 @@
-name: Todoist Box
+name: Update Gist
 
 on:
-  schedule:
-    - cron: "0 * * * *"
   push:
-    branches: master
+    branch: master
+
+  schedule:
+    - cron: "0 */3 * * *"
 
 jobs:
   update-gist:
-    runs-on: macos-latest
-
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: Install
